# mohnish-ort

./: .gitignore  AI_HANDOVER.md  GEMINI.md  README.md  REFACTORING_PLAN.md  SPEC.md  STRATEGY_ELI7.md  index.html  main.py  paper.sh  pyproject.toml  requirements.txt  run_algo.bat  tmux.sh
docs/: DELTA_DESIGN.md  DESIGN.md  FLOW.md  INTENT_VS_CODE.md  RULES.md  SDK.md  STRATEGY_DELTA.md  STRATEGY_TECHNICAL.md  TRADER_INTENT.md
factory/: samesymbol.py  settings.yml  symbols.yml
src/: api.py  backtest.py  backtest_live.py  band.py  both.py  constants.py  download_1m.py  live_backtest.py  main.py  models.py  oneside.py  options.py  order.py  paper.py  signals.py  symbols.py  trading_strategy.py  universe.py  wsocket.py
src/core/: build.py  config.py  engine.py  models.py  utils.py
src/deprecated/: both.py  oneside.py
src/engine/: signals.py  symbols.py
src/factory/: mohnish-ort.yml  samesymbol.py  settings.yml  signals.csv
src/integrations/: api.py  paper.py  wsocket.py
src/resources/: settings.yml  symbols.yml
src/sdk/: books.py  helper.py  models.py  order_manager.py  restapi.py  signals.py  symbol.py  utils.py  wserver.py
src/strategies/: both.py  coinshort.py  delta.py  oneside.py
tests/: conftest.py  test_symbols.py  test_t1.py
